--- a/production/general_elements.html
+++ b/production/general_elements.html
@@ -1284,6 +1284,11 @@
                 </div>
                 <div class="x_content bs-example-popovers">
 
+                  <div class="alert alert-text-black alert-success alert-dismissible fade in" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
+                    </button>
+                    <strong>Holy guacamole!</strong> Best check yo self, you're not looking too good.
+                  </div>
                   <div class="alert alert-success alert-dismissible fade in" role="alert">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
                     </button>
